Bug 149709 - EDITING Track Changes: Writer does not show number change of second-level numbered paragraphs correctly
Summary: EDITING Track Changes: Writer does not show number change of second-level num...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2
Keywords:
Depends on:
Blocks: Track-Changes-Lists
  Show dependency treegraph
 
Reported: 2022-06-24 07:23 UTC by NISZ LibreOffice Team
Modified: 2022-08-29 06:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example data source file made with LO 5.4 (9.52 KB, application/vnd.oasis.opendocument.text)
2022-06-24 07:25 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-06-24 07:23:20 UTC
Description:
Writer does not show the change in serial numbers in numbered lists when an item is inserted.

Steps to Reproduce:
1. Create a numbered list in LibreOffice Writer.
2. Record Track Changes. (Ctrl - Shift - E)
3. Create a new element in the list.

Actual Results:
Writer does not show that the last item was the 3. previously.

Expected Results:
Show that the last item was the third list item previously.


Reproducible: Always


User Profile Reset: No



Additional Info:
Follow-up to Bug 115524.

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: cb22629eb251de97084ab11f80cb54687483996f
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2022-06-24 07:25:22 UTC
Created attachment 180944 [details]
Example data source file made with LO 5.4
Comment 2 Xisco Faulí 2022-06-24 08:37:41 UTC
*** Bug 149708 has been marked as a duplicate of this bug. ***
Comment 3 Eike Rathke (retired, only occasionally showing up) 2022-06-25 07:57:54 UTC
*** Bug 149711 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2022-07-01 14:49:41 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/db1f4457543918b5e3cd8b4d3a70676855952314

tdf#149709 sw_redlinenum: fix list levels

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-07-04 08:57:35 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/eea2c6b59812950fd7b9a67532ac1a584da6aa46

tdf#149709 sw_redlinenum: fix list levels

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2022-08-29 06:29:38 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b323f1fba2a7a409177f5296c6ba8b98c9e537ad
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL