tdf#149709 sw_redlinenum: fix list levels

Levels of ORIGTEXT SwNodeNum weren't updated,
resulting bad numbering of multilevel lists during
editing and file import.

Follow-up to commit d0e49c07203c9ae33c5dfa1855b2b8909c3e16dc
"tdf#115524 sw_redlinenum: show original numbering of insertions".

Change-Id: I478971643a10b2007f37a4f0074067896d546228
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136734
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>